# AutoPas-FuzzyTuning-Bachelor-Thesis

./: README.md
data/: CoolMuc2_launch_Benchmark.py  extract_data.py  remove_empty_lines.sh  source_load_modules-sh
data-analysis/: .gitignore  rule_benchmark.py  rule_extraction.py
data-analysis/cluster-examples-dont-pause/: rule-benchmark.ipynb
data-analysis/cluster-examples-pause/: rule-benchmark.ipynb
data-analysis/cluster-examples-pause-rules-without-exploding-liquid/: fuzzyRulesComponentsWithoutExplodingLiquid.frule  rule-benchmark.ipynb
data-analysis/cluster-examples-pause-suitability/: rule-benchmark.ipynb
data-analysis/cluster-examples-pause-suitability-without-exploding-liquid/: fuzzyRulesSuitabilityWithoutExplodingLiquid.frule  rule-benchmark.ipynb
data-analysis/component-rules/: fuzzy-inputs.txt  fuzzy-outputs.txt  fuzzyrules-components.frule
data-analysis/suitability-rules/: fuzzy-inputs.txt  fuzzy-outputs.txt  fuzzy-rules.txt  fuzzyrules-suitability.frule
data-analysis/wsl-examples-pause/: rule-benchmark.ipynb
data-analysis/wsl2-uniform-cubes/: README.md
data/data-cluster-examples-dont-pause/: README.md
data/data-cluster-examples-pause/: README.md  extract_data.py
data/data-wsl2-examples-pause/: README.md
data/liveInfoStruct_Configuration/: README.md  analysis.ipynb  cleaned.csv  combined.csv  (+7 more)
demo/cpp/: CMakeLists.txt
demo/cpp/src/: FuzzyRule.h
latex/: Manuel_Lerchner_Fuzzy_Tuning.tex  README.md  glossary.tex  literature.bib  settings.tex
presentation/: README.md  beamerthemelmtslides.sty  literature.bib  slides.tex
(+1099 files in other folders)
